# iDescriptor

./: .gitmodules  CMakeLists.txt  README.md  flake.nix  install-apple-drivers.ps1  install-win-fsp.silent.bat  resources.qrc
.github/: FUNDING.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
cmake/: win-deploy.cmake
nix/: package.nix
qml/: MapView.qml
resources/: import.shortcut
resources/installer/: LICENSE.rtf
scripts/: deploy-dmg.sh
src/: afcexplorerwidget.cpp  afcexplorerwidget.h  airplaywidget.cpp  airplaywindow.cpp  airplaywindow.h  appcontext.cpp  appcontext.h  appdownloadbasedialog.cpp  appdownloadbasedialog.h  appdownloaddialog.cpp  appdownloaddialog.h  appinstalldialog.cpp  appinstalldialog.h  appstoremanager.cpp  appstoremanager.h  appswidget.cpp  appswidget.h  cableinfowidget.cpp  cableinfowidget.h  detailwindow.cpp  detailwindow.h  devdiskimagehelper.cpp  devdiskimagehelper.h  devdiskimageswidget.cpp  devdiskimageswidget.h  devdiskmanager.cpp  devdiskmanager.h  devicedatabase.cpp  deviceimagewidget.cpp  deviceinfowidget.cpp  deviceinfowidget.h  devicemanagerwidget.cpp  devicemanagerwidget.h  devicemenuwidget.cpp  devicemenuwidget.h  devicemonitor.h  devicesidebarwidget.cpp  devicesidebarwidget.h  devicetabwidget.cpp  devicetabwidget.h  (+104 more)
src/base/: appdownload.h
src/rust/: Cargo.toml  build.rs
src/rust/include/: idescriptor_rust.h
src/rust/src/: afc.rs  afc2_services.rs  afc_services.rs  hause_arrest.rs  io_manager.rs  lib.rs  screenshot.rs  service_manager.rs  utils.rs
util/: get-msys2-archive.go
(+37 files in other folders)
