[package]
name = "idescriptor_rust_codebase"
version = "0.1.0"
edition = "2024"

[lib]
name = "idescriptor_rust_codebase"

[dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
futures = "0.3"
idevice = { path = "../../lib/idevice-rs/idevice", features = ["usbmuxd"] }
uuid = { version = "1.22.0", features = ["v4"] }
